Fixed overlap on hide button

--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ html,body {
 
 #instructions {
 	position: relative;
-	height: 10%;
+	height: 15%;
 	text-align: center;
 	width: 60%;
 	margin-left: auto;
